attempted fix for too wide hearder (at 640 and 480)

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -5345,8 +5345,7 @@ a.badge:focus {
     }
     .navbar-static-top .container{
         width:620px;
-
-    }
+    }/* fix for 640 width */
   .hidden-desktop {
     display: inherit !important;
   }
@@ -6161,6 +6160,9 @@ a.badge:focus {
     #formatCategories {
         display: none;
     }
+    .navbar-static-top .container{
+        width:450px;
+    }/* fix for 480 width */
     .navbar-fixed-bottom .container {
         width: 630px;
     }
